tests/paczka1/fuzzy1/57415861.err
Error in line 4: S495 S695 41,9
Error in line 8: qyk S695 73,1
Error in line 19: Irnrd S695 33,7
Error in line 21: 3LAh9 S455 1,4
